@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2169] fixed adding dependencies to triggers on mass update (Aly)
  - [ZBX-2157] fixed script permissions (Vedmak)
  - [ZBX-2135] fixed screens ignore nodes "All" option in selection dropdown (Vedmak)
  - [ZBX-1954] fixed config file errors if special chars are used in db password (Vedmak)
